Fri Feb 27 15:16:36 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_unite.mpb:

          . Base project for building against UNITE.

        * cuts/utils/db/SQLite/Parameter.cpp:
        * cuts/utils/db/SQLite/Parameter_List.h:
        * cuts/utils/db/SQLite/Parameter_List.cpp:
        * cuts/utils/db/SQLite/Query.h:
        * cuts/utils/db/SQLite/Query.cpp:
        * cuts/utils/db/SQLite/Record.h:
        * cuts/utils/db/SQLite/Record.cpp:

          . Implemented some SQLite specific functions that are
            needed by UNITE. We should figure out how to push these
            functions down into the interfaces so all backends can
            leverage it.

        * cuts/utils/deployment/Host_T.h:
        * cuts/utils/deployment/Host_T.inl:
        * cuts/utils/deployment/Host_T.cpp:
        * cuts/utils/deployment/Unique_Deployment_T.h:
        * cuts/utils/deployment/deployment.mpc:
        * cuts/utils/deployment/unique-deployments.cpp:

          . Made some more application-specific chanages. We need to
            generalize  this application so it can become useful.

        * cuts/utils/unite:
        * cuts/utils/unite/Log_Format.h:
        * cuts/utils/unite/Log_Format.cpp:
        * cuts/utils/unite/Log_Format_Compiler.h:
        * cuts/utils/unite/Log_Format_Compiler.cpp:
        * cuts/utils/unite/Log_Format_Data_Entry.h:
        * cuts/utils/unite/Log_Format_Data_Entry.cpp:
        * cuts/utils/unite/Relation.h:
        * cuts/utils/unite/Relation.cpp:
        * cuts/utils/unite/Unit_Test.h:
        * cuts/utils/unite/Unit_Test.cpp:
        * cuts/utils/unite/Unit_Test_Builder.h:
        * cuts/utils/unite/Unit_Test_Builder.cpp:
        * cuts/utils/unite/Unit_Test_Evaluator.h:
        * cuts/utils/unite/Unit_Test_Evaluator.cpp:
        * cuts/utils/unite/Unit_Test_Graph.h:
        * cuts/utils/unite/Unit_Test_Graph.cpp:
        * cuts/utils/unite/Unit_Test_Result.h: