@@ -1,3 +1,14 @@
+Fri Feb 27 15:49:59 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/unite/Log_Format.h:
+        * cuts/utils/unite/Log_Format.cpp:
+        * cuts/utils/unite/Unite_App.cpp:
+
+          . Added support for *studying* a log format, which should improve
+            for VERY large datasets.
+
+          . Added support for timing the evaluation.
+
 Fri Feb 27 15:16:36 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MPC/config/cuts_unite.mpb:
